casa/public/stylesheets/claimHtmlOutput.css
tr{
    vertical-align: middle;
}

td:not(:empty){
    padding-bottom: 3px;
    padding-top: 5px;
}

td[id*='Heading']
{
    font-size: 20px!important;
}

span {
    font-family: arial!important;
    color: #000!important;
    font-size: 14px;
    line-height: 1.2em;
}

